# mambo

./: .gitignore  LICENSE  NOTICE  README.md
mambo/: .env.example  .gitignore  Dockerfile  FOUNDATION.md  README.md  docker-compose.yml  pyproject.toml
mambo/.github/workflows/: test.yml
mambo/deploy/nginx/: mambo.yttrix.tech.conf
mambo/deploy/systemd/: mambo-api.service  (+1 more)
mambo/frontend/: README.md  answer.jsx  chat.jsx  emblem.jsx  index.html  mobile.html  router.jsx  sidebar.jsx  theme.css
mambo/ingestion/: acquire.py  allowlist.py  browser.py  chunk.py  embed_bulk.py  extract.py  fetch.py  ingest_staged.py  pipeline.py  staging.py  store.py
mambo/rag/: __init__.py  admin.py  api.py  auth.py  catalog.py  guard.py  journeys.py  llm.py  matcher.py  prompt.py  retrieval.py  router.py  sanitize.py  security.py  service.py  trust.py  verify.py  warmup.py
mambo/registry/: journeys.json  load_registry.py  ministries.json  sources.json
mambo/scripts/: backup.sh  check_citation_links.py  curate.py  evaluate_mambo.py  render_proposal.py  runpod_embed.sh  seed_admin.py  zimlii_fetch_via_cookie.py
mambo/shared/: config.py  db.py  embeddings.py
mambo/staging/: curation_rules.json
mambo/submission/: proposal.md  team.md
mambo/tests/: conftest.py  test_citations.py  test_feedback.py  test_guard.py  test_integration.py  test_intent.py  test_router.py  test_sanitize.py  test_schema.py  test_security.py  test_service_rescue.py  test_streaming.py  test_trust.py
mambo/webchat/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
(+145 files in other folders)
