[project]
name = "mambo"
version = "0.1.0"
description = "Mambo — plain-language information assistant for the Government of Zimbabwe"
requires-python = ">=3.12"
dependencies = [
    # API (Module 2 — RAG)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",          # OpenAI-compatible client for DeepSeek
    # HTTP / scraping (Module 3 — Ingestion)
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=1.8",
    "tenacity>=8.2",
    "python-slugify>=8.0",
    # Documents + OCR
    "pymupdf>=1.24",          # PDF text + page rasterisation (no poppler needed)
    "pytesseract>=0.3.10",    # OCR via system tesseract
    "Pillow>=10.0",
    "python-docx>=1.1",       # .docx extraction (official forms/guides)
    # Admin portal auth
    "bcrypt>=4.2",            # staff password hashing
    "email-validator>=2.0",   # Pydantic EmailStr (admin login)
    # Knowledge Store
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # Shared
    "pydantic>=2.7",
    "numpy>=1.26",
    "playwright>=1.60.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that need a live Postgres+pgvector DB",
]
